Update index.html with projects

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               </td>
               <td>The final project for my Full Stack Bootcamp. Using Node, Express, MongoDB, and a RESTful architecture, I created
                 an app with full CRUD support focused on showing campgrounds to a user. User's can register for an account,
-                login, add new campgrounds, comment on other campgrounds, and delete campgrounds they have added.
+                login, add new campgrounds, comment on other campgrounds, and delete campgrounds they have addedm
               </td>
             </tr>
           </tbody>
