--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <tr>
               <td>
                 <a href="https://build-jeetddekpi.now.sh/" target="_blank">
-                  <img src="../dist/img/catch-of-the-day.png" alt="Catch of the Day">
+                  <img src="./img/catch-of-the-day.png" alt="Catch of the Day">
                 </a>
               </td>
               <td>“Catch of the Day” is built with React JS. It is a real-time app for a trendy seafood market where price and
@@ -259,7 +259,7 @@
             <tr>
               <td>
                 <a href="https://dang-thats-delicious-zhaniztaai.now.sh/" target="_blank">
-                  <img src="../dist/img/dang-thats-delicious.png" alt="Dang thats delicious">
+                  <img src="./img/dang-thats-delicious.png" alt="Dang thats delicious">
                 </a>
               </td>
               <td>“Dang Thats Delicious" is a full stack web apps with Node.js, Express, MongoDB, Passport JS. Users can search,
@@ -272,7 +272,7 @@
             <tr>
               <td>
                 <a href="http://raywu.me/travel-site/" target="_blank">
-                  <img src="../dist/img/trip.png" alt="Travel Site">
+                  <img src="./img/trip.png" alt="Travel Site">
                 </a>
               </td>
               <td>Leveraging NodeJS, built a responsive, mobile-first responsive website. Leveraging modern skill-sets and technolgies
@@ -283,7 +283,7 @@
             <tr>
               <td>
                 <a href="https://frozen-escarpment-36551.herokuapp.com/" target="_blank">
-                  <img src="../dist/img/yelp-camp.png" alt="Yelp Camp">
+                  <img src="./img/yelp-camp.png" alt="Yelp Camp">
                 </a>
               </td>
               <td>The final project for my Full Stack Bootcamp. Using Node, Express, MongoDB, and a RESTful architecture, I created
