--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <span class="secondary">Developer</span>
           </h1>
           <p class="underline">Hi, I'm
-            <a href="https://www.github.com/me">Raymond</a>! I'm interested in full-stack web development, graphic design, integrated systems, data visualization.
+            <a href="https://www.github.com/Rootventure">Raymond</a>! I'm interested in full-stack web development, graphic design, integrated systems, data visualization.
           </p>
           <p>
             <a class="button button-secondary" href="#contact">Get in Touch</a>
@@ -119,6 +119,10 @@
           <div class="card">
             <img src="img/node.png" alt="Node.js Logo">
             <h3>Node.js</h3>
+          </div>
+          <div class="card">
+            <img src="img/sql.png" alt="SQL Logo">
+            <h3>SQL</h3>
           </div>
           <div class="card">
             <img src="img/python.png" alt="Python Logo">
