Updated descriptions for projects

--- a/index.html
+++ b/index.html
@@ -240,9 +240,10 @@
                   <img src="./img/catch-of-the-day.png" alt="Catch of the Day">
                 </a>
               </td>
-              <td>“Catch of the Day” is built with React JS. It is a real-time app for a trendy seafood market where price and
-                quantity available are variable and can change at a moment's notice. We will build a menu, an order form,
-                and an inventory management area where authorized users can immediately update product details.</td>
+              <td>“Catch of the Day” is a client side application that is built with React JS and Firebase. It is a real-time
+                app for a trendy seafood market where price and quantity available are variable and can change at a moment's
+                notice. Using React, I build a menu, an order form, and an inventory management area where authorized users
+                can immediately update product details.</td>
             </tr>
             <tr>
               <td>
@@ -252,9 +253,8 @@
               </td>
               <td>“Dang Thats Delicious" is a full stack web apps with Node.js, Express, MongoDB, Passport JS. Users can search,
                 geolocate, review and curate their favourite restaurants from around the world. The application has three
-                main models — Users, Stores and Reviews — all of which are relational. It is designed to hit upon many of
-                today's application needs such as user authentication, database storage, Ajax REST API, file upload and image
-                resizing.
+                main relationalmodels — Users, Stores and Reviews. It is designed to hit upon many of today's application
+                needs such as user authentication, database storage, Ajax REST API, file upload and image resizing.
               </td>
             </tr>
             <tr>
@@ -263,7 +263,8 @@
                   <img src="./img/trip.png" alt="Travel Site">
                 </a>
               </td>
-              <td>Leveraging NodeJS, built a responsive, mobile-first responsive website. Leveraging modern skill-sets and technolgies
+              <td>Leveraging NodeJS, this is a responsive, mobile-first landing webpage. Utilized BEM & PostCSS techniques to
+                keep the CSS styles organized and manageable even on larger sites. Utilized modern skill-sets and technolgies
                 such as: Git, Gulp, babel, css, normalize, postcss, webpack, waypoints, javascript, jquery, svg, sprite,
                 autoprefixer, lazysizes, and browser-sync.
               </td>
@@ -276,7 +277,7 @@
               </td>
               <td>The final project for my Full Stack Bootcamp. Using Node, Express, MongoDB, and a RESTful architecture, I created
                 an app with full CRUD support focused on showing campgrounds to a user. User's can register for an account,
-                login, add new campgrounds, comment on other campgrounds, and delete campgrounds they have addedm
+                login, add new campgrounds, comment on other campgrounds, and delete campgrounds the users own.
               </td>
             </tr>
           </tbody>
