Updated Contact me section

--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
       <header class="section-header">
         <div class="small-container">
           <h2>Contact</h2>
+          <p>It is critical that I find a team with similar interests and passions. I welcome any and all code critique, mentorship
+            opportunities, and help with coding best practices.</p>
           <p>I'd love to hear from you! Fill out the form below, email me at
             <a href="mailto:raywupharmd@gmail.com">raywupharmd@gmail.com</a>, or find me on
             <a href="https://twitter.com/rootventure">Twitter</a> or
