--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="about">
           <h1>
             <span class="primary">Pharmacist</span> /
-            <span class="secondary">Developer</span>
+            <span class="secondary">Aspiring Developer</span>
           </h1>
           <p class="underline">Hi, I'm
             <a href="https://www.github.com/Rootventure">Raymond</a>! I'm interested in full-stack web development, graphic design, integrated systems, data visualization.
@@ -240,9 +240,9 @@
                   <img src="./img/catch-of-the-day.png" alt="Catch of the Day">
                 </a>
               </td>
-              <td>“Catch of the Day” is a client side application that is built with React JS and Firebase. It is a real-time
+              <td>“Catch of the Day” is a client-side application that is built with ReactJS and Firebase. It is a real-time
                 app for a trendy seafood market where price and quantity available are variable and can change at a moment's
-                notice. Using React, I build a menu, an order form, and an inventory management area where authorized users
+                notice. Using ReactJS, I built a menu, an order form, and an inventory management area where authorized users
                 can immediately update product details.</td>
             </tr>
             <tr>
@@ -253,8 +253,8 @@
               </td>
               <td>“Dang Thats Delicious" is a full stack web apps with Node.js, Express, MongoDB, Passport JS. Users can search,
                 geolocate, review and curate their favourite restaurants from around the world. The application has three
-                main relationalmodels — Users, Stores and Reviews. It is designed to hit upon many of today's application
-                needs such as user authentication, database storage, Ajax REST API, file upload and image resizing.
+                main relationalmodels — Users, Stores and Reviews. It is designed with user authentication, database storage,
+                Ajax REST API, file upload and image resizing.
               </td>
             </tr>
             <tr>
@@ -263,10 +263,10 @@
                   <img src="./img/trip.png" alt="Travel Site">
                 </a>
               </td>
-              <td>Leveraging NodeJS, this is a responsive, mobile-first landing webpage. Utilized BEM & PostCSS techniques to
-                keep the CSS styles organized and manageable even on larger sites. Utilized modern skill-sets and technolgies
-                such as: Git, Gulp, babel, css, normalize, postcss, webpack, waypoints, javascript, jquery, svg, sprite,
-                autoprefixer, lazysizes, and browser-sync.
+              <td>Leveraging NodeJS, this is a responsive, mobile-first landing webpage. I utilized BEM & PostCSS techniques
+                to keep the CSS styles organized and manageable. I have also picked up modern skill-sets and technolgies
+                throughout the development of this site, such as: Git, Gulp, babel, css, normalize, postcss, webpack, waypoints,
+                javascript, jquery, svg, sprite, autoprefixer, lazysizes, and browser-sync.
               </td>
             </tr>
             <tr>
@@ -275,9 +275,10 @@
                   <img src="./img/yelp-camp.png" alt="Yelp Camp">
                 </a>
               </td>
-              <td>The final project for my Full Stack Bootcamp. Using Node, Express, MongoDB, and a RESTful architecture, I created
-                an app with full CRUD support focused on showing campgrounds to a user. User's can register for an account,
-                login, add new campgrounds, comment on other campgrounds, and delete campgrounds the users own.
+              <td>The final project for my Full Stack Bootcamp. Using NodeJS, Express, MongoDB, and a RESTful architecture, I
+                created a web app with full CRUD support that is focused on showing campgrounds to a user. User's can register
+                for an account, login, add new campgrounds, comment on other campgrounds, and delete campgrounds the users
+                own.
               </td>
             </tr>
           </tbody>
