Updated project table with FCC completed projects

--- a/index.html
+++ b/index.html
@@ -236,13 +236,67 @@
           <tbody>
             <tr>
               <td>
+                <a href="http://raywu.me/pomodoro-clock/" target="_blank">
+                  <img src="./img/pomodoro.png" alt="Pomodoro Clock">
+                </a>
+              </td>
+              <td>A simple Pomodoro Clock application built utilizing
+                <strong>vanilla JS</strong>. Utilized the native JS Date Object extensively.
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="http://raywu.me/Javascript-Calculator/" target="_blank">
+                  <img src="./img/JS-calc.png" alt="Calculator">
+                </a>
+              </td>
+              <td>A simple calculator application built utilizing
+                <strong>vanilla JS</strong>. Inspired by the Android Calculator, I followed their material design by implementing
+                the CSS with Flexbox.
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="http://raywu.me/wiki-viewer/" target="_blank">
+                  <img src="./img/WikiViewer.png" alt="Wikipedia Viewer">
+                </a>
+              </td>
+              <td>A Wikipedia previewer that utilizes the
+                <strong>MediaWiki API</strong> for the query.
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="https://codepen.io/Bananajama/full/GqJLjO/" target="_blank">
+                  <img src="./img/weather.png" alt="Local Weather Application">
+                </a>
+              </td>
+              <td>A local weather application utilizing
+                <strong>vanilla JS</strong> and the
+                <strong>Open Weather API</strong>. Practiced using Flexbox for a modern user-friendly UI. Features on-click temperature
+                conversion.
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="http://raywu.me/quote-machine/" target="_blank">
+                  <img src="./img/quoteGen.png" alt="Random Quote Generator">
+                </a>
+              </td>
+              <td>This is a random quote generator using a
+                <strong>JSON-encoded, third-party API</strong>. The user can request additional quotes by clicking the "Get Quote"
+                button. Quotes are Tweetable, and trimmed as necessary to meet Twitter character count limitations.</td>
+            </tr>
+            <tr>
+              <td>
                 <a href="https://build-jeetddekpi.now.sh/" target="_blank">
                   <img src="./img/catch-of-the-day.png" alt="Catch of the Day">
                 </a>
               </td>
               <td>“Catch of the Day” is a client-side application that is built with ReactJS and Firebase. It is a real-time
                 app for a trendy seafood market where price and quantity available are variable and can change at a moment's
-                notice. Using ReactJS, I built a menu, an order form, and an inventory management area where authorized users
+                notice. Using
+                <strong>ReactJS</strong>, I built a menu, an order form, and an inventory management area where authorized users
                 can immediately update product details.</td>
             </tr>
             <tr>
@@ -251,10 +305,10 @@
                   <img src="./img/dang-thats-delicious.png" alt="Dang thats delicious">
                 </a>
               </td>
-              <td>“Dang Thats Delicious" is a full stack web apps with Node.js, Express, MongoDB, Passport JS. Users can search,
-                geolocate, review and curate their favourite restaurants from around the world. The application has three
-                main relationalmodels — Users, Stores and Reviews. It is designed with user authentication, database storage,
-                Ajax REST API, file upload and image resizing.
+              <td>“Dang Thats Delicious" is a full stack web apps with
+                <strong>Node.js, Express, MongoDB, Passport JS</strong>. Users can search, geolocate, review and curate their favourite
+                restaurants from around the world. The application has three main relational models — Users, Stores and Reviews.
+                It is designed with user authentication, database storage, Ajax REST API, file upload and image resizing.
               </td>
             </tr>
             <tr>
@@ -263,8 +317,9 @@
                   <img src="./img/trip.png" alt="Travel Site">
                 </a>
               </td>
-              <td>Leveraging NodeJS, this is a responsive, mobile-first landing webpage. I utilized BEM & PostCSS techniques
-                to keep the CSS styles organized and manageable. I have also picked up modern skill-sets and technolgies
+              <td>Leveraging
+                <strong>NodeJS</strong>, this is a responsive, mobile-first landing webpage. I utilized BEM & PostCSS techniques
+                to keep the CSS styles organized and manageable. I have also picked up modern skill-sets and technologies
                 throughout the development of this site, such as: Git, Gulp, babel, css, normalize, postcss, webpack, waypoints,
                 javascript, jquery, svg, sprite, autoprefixer, lazysizes, and browser-sync.
               </td>
@@ -275,10 +330,11 @@
                   <img src="./img/yelp-camp.png" alt="Yelp Camp">
                 </a>
               </td>
-              <td>The final project for my Full Stack Bootcamp. Using NodeJS, Express, MongoDB, and a RESTful architecture, I
-                created a web app with full CRUD support that is focused on showing campgrounds to a user. User's can register
-                for an account, login, add new campgrounds, comment on other campgrounds, and delete campgrounds the users
-                own.
+              <td>The final project for my Full Stack Bootcamp. Using
+                <strong>NodeJS, Express, MongoDB</strong>, and a
+                <strong>RESTful architecture</strong>, I created a web app with full CRUD support that is focused on showing campgrounds
+                to a user. User's can register for an account, login, add new campgrounds, comment on other campgrounds,
+                and delete campgrounds the users own.
               </td>
             </tr>
           </tbody>
