Added twitchtv and tictactoe projects

--- a/index.html
+++ b/index.html
@@ -236,12 +236,35 @@
           <tbody>
             <tr>
               <td>
+                <a href="http://raywu.me/Tic-tac-toe/" target="_blank">
+                  <img src="./img/Tictactoe.png" alt="Tic Tac Toe">
+                </a>
+              </td>
+              <td>Project was built using
+                <strong>VanillaJS and some jQuery</strong>. The AI was designed using a minimax algorithm to recursively calculate
+                the best possible move based on the current board.
+              </td>
+            </tr>
+            <tr>
+              <td>
                 <a href="http://raywu.me/pomodoro-clock/" target="_blank">
                   <img src="./img/pomodoro.png" alt="Pomodoro Clock">
                 </a>
               </td>
               <td>A simple Pomodoro Clock application built utilizing
                 <strong>vanilla JS</strong>. Utilized the native JS Date Object extensively.
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="http://raywu.me/Twitchtv/" target="_blank">
+                  <img src="./img/Twitchtv.png" alt="Twitch API">
+                </a>
+              </td>
+              <td>A TwitchTv application built utilizing
+                <strong>vanilla JS</strong> and the
+                <strong>TwitchTv API</strong>. User is able to add new streams to their list and jump right to the streamers channel
+                from the card. The UI was built using Material Design principles.
               </td>
             </tr>
             <tr>
