Added completed Simon game to project section

--- a/index.html
+++ b/index.html
@@ -236,13 +236,25 @@
           <tbody>
             <tr>
               <td>
+                <a href="http://raywu.me/Simon/" target="_blank">
+                  <img src="./img/simon.png" alt="Tic Tac Toe">
+                </a>
+              </td>
+              <td>Project was built using
+                <strong>VanillaJS</strong>. The program features two modes of play, a counter that displays the round, and use of
+                the HTML Audio element.
+              </td>
+            </tr>
+            <tr>
+              <td>
                 <a href="http://raywu.me/Tic-tac-toe/" target="_blank">
                   <img src="./img/Tictactoe.png" alt="Tic Tac Toe">
                 </a>
               </td>
               <td>Project was built using
-                <strong>VanillaJS and some jQuery</strong>. The AI was designed using a minimax algorithm to recursively calculate
-                the best possible move based on the current board.
+                <strong>VanillaJS and some jQuery</strong>. The game features an option of competitive versus mode, or a match against
+                the computer. The AI was designed using a minimax algorithm to recursively calculate the best possible move
+                based on the current board.
               </td>
             </tr>
             <tr>
