--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <span class="secondary">Aspiring Developer</span>
           </h1>
           <p class="underline">Hi, I'm
-            <a href="https://www.github.com/Rootventure">Raymond</a>! I'm interested in full-stack web development, graphic design, integrated systems, data visualization.
+            <a href="https://www.github.com/raymondwu22">Raymond</a>! I'm interested in full-stack web development, graphic design, integrated systems, data visualization.
           </p>
           <p>
             <a class="button button-secondary" href="#contact">Get in Touch</a>
@@ -221,7 +221,7 @@
           <h2>Projects</h2>
           <p>Some projects I made in my free time.</p>
           <p>
-            <a href="https://github.com/rootventure" class="button">View GitHub</a>
+            <a href="https://github.com/raymondwu22" class="button">View GitHub</a>
           </p>
         </div>
       </header>
@@ -236,7 +236,7 @@
           <tbody>
             <tr>
               <td>
-                <a href="http://raywu.me/Simon/" target="_blank">
+                <a href="https://raymondwu22.github.io/Simon/" target="_blank">
                   <img src="./img/simon.png" alt="Tic Tac Toe">
                 </a>
               </td>
@@ -247,7 +247,7 @@
             </tr>
             <tr>
               <td>
-                <a href="http://raywu.me/Tic-tac-toe/" target="_blank">
+                <a href="https://raymondwu22.github.io/Tic-tac-toe/" target="_blank">
                   <img src="./img/Tictactoe.png" alt="Tic Tac Toe">
                 </a>
               </td>
@@ -259,7 +259,7 @@
             </tr>
             <tr>
               <td>
-                <a href="http://raywu.me/pomodoro-clock/" target="_blank">
+                <a href="https://raymondwu22.github.io/pomodoro-clock/" target="_blank">
                   <img src="./img/pomodoro.png" alt="Pomodoro Clock">
                 </a>
               </td>
@@ -269,7 +269,7 @@
             </tr>
             <tr>
               <td>
-                <a href="http://raywu.me/Twitchtv/" target="_blank">
+                <a href="https://raymondwu22.github.io/Twitchtv/" target="_blank">
                   <img src="./img/Twitchtv.png" alt="Twitch API">
                 </a>
               </td>
@@ -281,7 +281,7 @@
             </tr>
             <tr>
               <td>
-                <a href="http://raywu.me/Javascript-Calculator/" target="_blank">
+                <a href="https://raymondwu22.github.io/Javascript-Calculator/" target="_blank">
                   <img src="./img/JS-calc.png" alt="Calculator">
                 </a>
               </td>
@@ -292,7 +292,7 @@
             </tr>
             <tr>
               <td>
-                <a href="http://raywu.me/wiki-viewer/" target="_blank">
+                <a href="https://raymondwu22.github.io/wiki-viewer/" target="_blank">
                   <img src="./img/WikiViewer.png" alt="Wikipedia Viewer">
                 </a>
               </td>
@@ -314,7 +314,7 @@
             </tr>
             <tr>
               <td>
-                <a href="http://raywu.me/quote-machine/" target="_blank">
+                <a href="https://raymondwu22.github.io/quote-machine/" target="_blank">
                   <img src="./img/quoteGen.png" alt="Random Quote Generator">
                 </a>
               </td>
@@ -348,7 +348,7 @@
             </tr>
             <tr>
               <td>
-                <a href="http://raywu.me/travel-site/" target="_blank">
+                <a href="https://raymondwu22.github.io/travel-site/" target="_blank">
                   <img src="./img/trip.png" alt="Travel Site">
                 </a>
               </td>
@@ -385,12 +385,12 @@
             opportunities, and help with coding best practices.</p>
           <p>I'd love to hear from you! Fill out the form below, email me at
             <a href="mailto:raywupharmd@gmail.com">raywupharmd@gmail.com</a>, or find me on
-            <a href="https://twitter.com/rootventure">Twitter</a> or
-            <a href="https://github.com/rootventure">GitHub</a>.</p>
+            <a href="https://twitter.com/raymondwu22">Twitter</a> or
+            <a href="https://github.com/raymondwu22">GitHub</a>.</p>
         </div>
       </header>
       <div class="small-container">
-        <form method="POST" action="http://formspree.io/raywupharmd@gmail.com">
+        <form method="POST" action="https://formspree.io/raywupharmd@gmail.com">
           <label for="name">Name</label>
           <input type="text" name="name">
           <label for="email">Email Address</label>
@@ -415,10 +415,10 @@
         Web developer/designer, autodidact, and problem solver. I love hiking, rock climbing and learning new skills.
       </p>
       <div class="social-icons">
-        <a href="https://twitter.com/rootventure" target="_blank">
+        <a href="https://twitter.com/raymondwu22" target="_blank">
           <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
         </a>
-        <a href="https://github.com/rootventure" target="_blank">
+        <a href="https://github.com/raymondwu22" target="_blank">
           <i class="fa fa-github fa-2x" aria-hidden="true"></i>
         </a>
         <a href="https://www.linkedin.com/in/raymond-wu-319705b3/" target="_blank">
